# dream

./: .gitignore  CHANGELOG.md  README.md  build.sh  dream.cabal  flake.nix
.github/workflows/: haskell-ci.yml
IR/: DumpIR.hs  IRGenerator.hs  IRSyntax.hs
analysis/: AnalysisError.hs  NameAnalysis.hs  Symbol.hs  SymbolTable.hs  TypeAnalysis.hs
app/: Lexer.hs  Parser.hs  Repl.hs  Syntax.hs
backend/: Arch.hs  ArchX86.hs  CodeGenerator.hs  MemoryLocation.hs  MemoryLocationAssigner.hs
constantfolding/: ConstantFolding.hs
dot-generator/: Dot.hs
main/: Main.hs
parser/: Lexer.hs  Parser.hs  ParserError.hs  Syntax.hs
repl/: Main.hs
runtime_lib/: Makefile  library.s  library_high.dream  startup.s
test-programs/: 8q.dream  andor.dream  cast.dream  constantfolding.dream  emptyblock.dream  fib.dream  fib_loop.dream  fib_mem.dream  functioncalls.dream  hello.dream  ifcondition.dream  plot.dream  whilecondition.dream
visitors/: Visitor.hs
