cabal-version:      2.4
name:               dream
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           The compiler for the dream language

-- A longer description of the package.
description:        A small compiler written as an exercise to better understand compilers and help me with my studies.

-- A URL where users can report bugs.
bug-reports:        https://github.com/Reijix/dream

-- The license under which the package is released.
license:            MIT
author:             Leon Vatthauer
maintainer:         leon.vatthauer@fau.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library parser
    exposed-modules: Parser, Syntax
    build-depends:    base ^>=4.16.3.0,
                      parsec,
    other-modules:
        Lexer
    hs-source-dirs:   parser
    default-language: Haskell2010

library dot
    exposed-modules: Dot
    build-depends:    base ^>=4.16.3.0,
                      parser
    hs-source-dirs:   dot-generator
    default-language: Haskell2010

executable dreamc
    main-is:          Main.hs
    build-depends:    base,
                      parser,
                      optparse-applicative,
                      dot
    hs-source-dirs:   main
    default-language: Haskell2010
executable dreamci
    main-is:          Main.hs
    build-depends:    base,
                      parser,
                      haskeline,
                      mtl
    hs-source-dirs:   repl
    default-language: Haskell2010
