cabal-version:      2.4
name:               dream
version:            0.1.0.0
synopsis:           The compiler for the dream language
description:        A small compiler written as an exercise to better understand compilers and help me with my studies.
homepage:  https://github.com/Reijix/dream
license:            MIT
author:             Leon Vatthauer
maintainer:         leon.vatthauer@fau.de
category:           Compiler
Tested-With: GHC ==9.2.2

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library parser
    exposed-modules:  Parser, Syntax
    build-depends:    base ^>=4.16.1.0,
                      parsec,
    other-modules:
        Lexer
    hs-source-dirs:   parser
    default-language: Haskell2010

library dot
    exposed-modules:  Dot
    build-depends:    base ^>=4.16.1.0,
                      parser
    hs-source-dirs:   dot-generator
    default-language: Haskell2010

library visitor
    exposed-modules:  Visitor
    build-depends:    base ^>=4.16.1.0,
                      parser
    hs-source-dirs:   visitors
    default-language: Haskell2010

executable dreamc
    main-is:          Main.hs
    build-depends:    base,
                      parser,
                      optparse-applicative,
                      dot
    hs-source-dirs:   main
    default-language: Haskell2010
executable dreamci
    main-is:          Main.hs
    build-depends:    base,
                      parser,
                      haskeline,
                      mtl
    hs-source-dirs:   repl
    default-language: Haskell2010
