cabal-version:      2.4
name:               dream
version:            0.1.0.0
synopsis:           The compiler for the dream language
description:        A small compiler written as an exercise to better understand compilers and help me with my studies.
homepage:  https://github.com/Reijix/dream
license:            MIT
author:             Leon Vatthauer
maintainer:         leon.vatthauer@fau.de
category:           Compiler
Tested-With: GHC ==9.2.2

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library compiler-lib
    exposed-modules:  Parser, ParserError, Dot, NameAnalysis, TypeAnalysis, AnalysisError, ConstantFolding, IRGenerator, DumpIR, CodeGenerator
    build-depends:    base,
                      containers, mtl, parsec, extra
    other-modules:    ArchX86, IRSyntax, Lexer, MemoryLocation, MemoryLocationAssigner, Symbol, SymbolTable, Syntax
    hs-source-dirs:   parser, analysis, dot-generator, constantfolding, IR, backend
    default-language: Haskell2010

executable dreamc
    main-is:          Main.hs
    build-depends:    base,
                      compiler-lib,
                      mtl,
                      extra,
                      optparse-applicative,
                      process
    hs-source-dirs:   main
    default-language: Haskell2010
